--- a/index.html
+++ b/index.html
@@ -257,298 +257,70 @@
       </section>
 
       <section id="portfolio" class="portfolio section">
-        <!-- Section Title -->
-        <div
-          class="container section-title aos-init aos-animate"
-          data-aos="fade-up"
-        >
-          <h2>Project</h2>
-          <p>Hasil portofolio yang pernah saya kerjakan/buat</p>
-        </div>
-        <!-- End Section Title -->
 
-        <div class="container">
-          <div
-            class="isotope-layout"
-            data-default-filter="*"
-            data-layout="masonry"
-            data-sort="original-order"
-          >
-            <ul
-              class="portfolio-filters isotope-filters aos-init aos-animate"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".app">App</li>
-              <li data-filter=".product">Card</li>
-              <li data-filter=".branding">Web</li>
-            </ul>
-            <!-- End Portfolio Filters -->
+      <!-- Section Title -->
+      <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+        <h2>Project</h2>
+        <p>Hasil portofolio yang pernah saya kerjakan/buat</p>
+      </div><!-- End Section Title -->
 
-            <div
-              class="row gy-4 isotope-container aos-init aos-animate"
-              data-aos="fade-up"
-              data-aos-delay="200"
-              style="position: relative; height: 1249.08px"
-            >
-              <div
-                class="col-6 col-lg-4 col-md-6 portfolio-item isotope-item app"
-                style="position: absolute; left: 0px; top: 0px"
-              >
-                <img
-                  src="assets/img/masonry-portfolio/masonry-portfolio-1.jpg"
-                  class="img-fluid"
-                  alt="Portofolio 1"
-                />
-                <div class="portfolio-info">
-                  <h4>Portofolio 1</h4>
-                  <p>Keterangan Portofolio 1</p>
-                  <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-1.jpg"
-                    title="Portofolio 1"
-                    data-gallery="portfolio-gallery-app"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.php"
-                    title="More Details"
-                    class="details-link"
-                    ><i class="bi bi-link-45deg"></i
-                  ></a>
-                </div>
-              </div>
-              <!-- End Portfolio Item -->
-              <div
-                class="col-6 col-lg-4 col-md-6 portfolio-item isotope-item product"
-                style="position: absolute; left: 439.987px; top: 0px"
-              >
-                <img
-                  src="assets/img/masonry-portfolio/masonry-portfolio-2.jpg"
-                  class="img-fluid"
-                  alt="Portofolio 2"
-                />
-                <div class="portfolio-info">
-                  <h4>Portofolio 2</h4>
-                  <p>Keterangan Portofolio 2</p>
-                  <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-2.jpg"
-                    title="Portofolio 2"
-                    data-gallery="portfolio-gallery-product"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.php"
-                    title="More Details"
-                    class="details-link"
-                    ><i class="bi bi-link-45deg"></i
-                  ></a>
-                </div>
-              </div>
-              <!-- End Portfolio Item -->
-              <div
-                class="col-6 col-lg-4 col-md-6 portfolio-item isotope-item branding"
-                style="position: absolute; left: 879.974px; top: 0px"
-              >
-                <img
-                  src="assets/img/masonry-portfolio/masonry-portfolio-3.jpg"
-                  class="img-fluid"
-                  alt="Portofolio 3"
-                />
-                <div class="portfolio-info">
-                  <h4>Portofolio 3</h4>
-                  <p>Keterangan Portofolio 3</p>
-                  <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-3.jpg"
-                    title="Portofolio 3"
-                    data-gallery="portfolio-gallery-branding"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.php"
-                    title="More Details"
-                    class="details-link"
-                    ><i class="bi bi-link-45deg"></i
-                  ></a>
-                </div>
-              </div>
-              <!-- End Portfolio Item -->
-              <div
-                class="col-6 col-lg-4 col-md-6 portfolio-item isotope-item app"
-                style="position: absolute; left: 879.974px; top: 257.988px"
-              >
-                <img
-                  src="assets/img/masonry-portfolio/masonry-portfolio-4.jpg"
-                  class="img-fluid"
-                  alt="Portofolio 4"
-                />
-                <div class="portfolio-info">
-                  <h4>Portofolio 4</h4>
-                  <p>Keterangan Portofolio 4</p>
-                  <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-4.jpg"
-                    title="Portofolio 4"
-                    data-gallery="portfolio-gallery-app"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.php"
-                    title="More Details"
-                    class="details-link"
-                    ><i class="bi bi-link-45deg"></i
-                  ></a>
-                </div>
-              </div>
-              <!-- End Portfolio Item -->
-              <div
-                class="col-6 col-lg-4 col-md-6 portfolio-item isotope-item product"
-                style="position: absolute; left: 439.987px; top: 302.913px"
-              >
-                <img
-                  src="assets/img/masonry-portfolio/masonry-portfolio-5.jpg"
-                  class="img-fluid"
-                  alt="Portofolio 5"
-                />
-                <div class="portfolio-info">
-                  <h4>Portofolio 5</h4>
-                  <p>Keterangan Portofolio 5</p>
-                  <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-5.jpg"
-                    title="Portofolio 5"
-                    data-gallery="portfolio-gallery-product"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.php"
-                    title="More Details"
-                    class="details-link"
-                    ><i class="bi bi-link-45deg"></i
-                  ></a>
-                </div>
-              </div>
-              <!-- End Portfolio Item -->
-              <div
-                class="col-6 col-lg-4 col-md-6 portfolio-item isotope-item branding"
-                style="position: absolute; left: 0px; top: 445.7px"
-              >
-                <img
-                  src="assets/img/masonry-portfolio/masonry-portfolio-6.jpg"
-                  class="img-fluid"
-                  alt="Portofolio 6"
-                />
-                <div class="portfolio-info">
-                  <h4>Portofolio 6</h4>
-                  <p>Keterangan Portofolio 6</p>
-                  <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-6.jpg"
-                    title="Portofolio 6"
-                    data-gallery="portfolio-gallery-branding"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.php"
-                    title="More Details"
-                    class="details-link"
-                    ><i class="bi bi-link-45deg"></i
-                  ></a>
-                </div>
-              </div>
-              <!-- End Portfolio Item -->
-              <div
-                class="col-6 col-lg-4 col-md-6 portfolio-item isotope-item app"
-                style="position: absolute; left: 879.974px; top: 557.05px"
-              >
-                <img
-                  src="assets/img/masonry-portfolio/masonry-portfolio-7.jpg"
-                  class="img-fluid"
-                  alt="Portofolio 7"
-                />
-                <div class="portfolio-info">
-                  <h4>Portofolio 7</h4>
-                  <p>Keterangan Portofolio 7</p>
-                  <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-7.jpg"
-                    title="Portofolio 7"
-                    data-gallery="portfolio-gallery-app"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.php"
-                    title="More Details"
-                    class="details-link"
-                    ><i class="bi bi-link-45deg"></i
-                  ></a>
-                </div>
-              </div>
-              <!-- End Portfolio Item -->
-              <div
-                class="col-6 col-lg-4 col-md-6 portfolio-item isotope-item product"
-                style="position: absolute; left: 879.974px; top: 851.075px"
-              >
-                <img
-                  src="assets/img/masonry-portfolio/masonry-portfolio-8.jpg"
-                  class="img-fluid"
-                  alt="Portofolio 8"
-                />
-                <div class="portfolio-info">
-                  <h4>Portofolio 8</h4>
-                  <p>Keterangan Portofolio 8</p>
-                  <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-8.jpg"
-                    title="Portofolio 8"
-                    data-gallery="portfolio-gallery-product"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.php"
-                    title="More Details"
-                    class="details-link"
-                    ><i class="bi bi-link-45deg"></i
-                  ></a>
-                </div>
-              </div>
-              <!-- End Portfolio Item -->
-              <div
-                class="col-6 col-lg-4 col-md-6 portfolio-item isotope-item branding"
-                style="position: absolute; left: 439.987px; top: 948.738px"
-              >
-                <img
-                  src="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
-                  class="img-fluid"
-                  alt="Portofolio 9"
-                />
-                <div class="portfolio-info">
-                  <h4>Portofolio 9</h4>
-                  <p>Keterangan Portofolio 9</p>
-                  <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
-                    title="Portofolio 9"
-                    data-gallery="portfolio-gallery-branding"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.php"
-                    title="More Details"
-                    class="details-link"
-                    ><i class="bi bi-link-45deg"></i
-                  ></a>
-                </div>
-              </div>
-              <!-- End Portfolio Item -->
-            </div>
-            <!-- End Portfolio Container -->
-          </div>
+      <div class="container">
+
+        <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
+
+          <ul class="portfolio-filters isotope-filters aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+            <li data-filter="*" class="filter-active">All</li>
+            <li data-filter=".gampang">gampang</li>
+            <li data-filter=".bikin emosi">bikin emosi</li>
+            <li data-filter=".lumayan">lumayan</li>
+          </ul><!-- End Portfolio Filters -->
+
+          <div class="row gy-4 isotope-container aos-init aos-animate" data-aos="fade-up" data-aos-delay="200" style="position: relative; height: 493.975px;">
+
+            
+                <div class="col-6 col-lg-4 col-md-6 portfolio-item isotope-item lumayan" style="position: absolute; left: 0px; top: 0px;">
+                  <img src="assets/img/masonry-portfolio/telkom vector.jpg" class="img-fluid" alt="Project background ">
+                  <div class="portfolio-info">
+                    <h4>Project background </h4>
+                    <p>DPK C</p>
+                    <a href="assets/img/masonry-portfolio/telkom vector.jpg" title="Project background " data-gallery="portfolio-gallery-lumayan" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    <a href="portfolio-details.php" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div><!-- End Portfolio Item -->
+                <div class="col-6 col-lg-4 col-md-6 portfolio-item isotope-item gampang" style="position: absolute; left: 360px; top: 0px;">
+                  <img src="assets/img/masonry-portfolio/bookcreator sejarah.jpg" class="img-fluid" alt="Project sejarah">
+                  <div class="portfolio-info">
+                    <h4>Project sejarah</h4>
+                    <p>sejarah</p>
+                    <a href="assets/img/masonry-portfolio/bookcreator sejarah.jpg" title="Project sejarah" data-gallery="portfolio-gallery-gampang" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    <a href="portfolio-details.php" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div><!-- End Portfolio Item -->
+                <div class="col-6 col-lg-4 col-md-6 portfolio-item isotope-item lumayan" style="position: absolute; left: 360px; top: 183.387px;">
+                  <img src="assets/img/masonry-portfolio/NALA DPK C.jpg" class="img-fluid" alt="Project muka">
+                  <div class="portfolio-info">
+                    <h4>Project muka</h4>
+                    <p>DPK C</p>
+                    <a href="assets/img/masonry-portfolio/NALA DPK C.jpg" title="Project muka" data-gallery="portfolio-gallery-lumayan" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    <a href="portfolio-details.php" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div><!-- End Portfolio Item -->
+                <div class="col-6 col-lg-4 col-md-6 portfolio-item isotope-item lumayan" style="position: absolute; left: 0px; top: 246.725px;">
+                  <img src="assets/img/masonry-portfolio/homepage game.jpg" class="img-fluid" alt="Project homepage game">
+                  <div class="portfolio-info">
+                    <h4>Project homepage game</h4>
+                    <p>DPK C</p>
+                    <a href="assets/img/masonry-portfolio/homepage game.jpg" title="Project homepage game" data-gallery="portfolio-gallery-lumayan" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    <a href="portfolio-details.php" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div><!-- End Portfolio Item -->
+          </div><!-- End Portfolio Container -->
+
         </div>
-      </section>
+
+      </div>
+
+    </section>
 
       <section id="contact" class="contact section">
         <!-- Section Title -->
